--- a/output/team.html
+++ b/output/team.html
@@ -53,6 +53,20 @@
     </div>
 </div>
         
+        <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">NoName</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: NoID</li>
+            <li class="list-group-item">Email: <a href="mailto:NoEmail">NoEmail</a></li>
+            <li class="list-group-item">School: undefined</li>
+        </ul>
+    </div>
+</div>
+        
             </div>
         </div>
     </div>
